--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "@components/*": ["components/*"],
       "@styles/*": ["styles/*"],
-      "@animations/*": ["animations/*"]
+      "@animations/*": ["animations/*"],
+      "@hooks/*": ["hooks/*"]
     }
   }
 }
